// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Figure /> should match Figure & FigCaption snapshot 1`] = `
<div>
  <figure
    class="c-figure"
  >
    <img
      alt="A placeholder image"
      class=""
      src="https://via.placeholder.com/400x300"
    />
    <figcaption
      class="c-figure__caption"
    >
      Hello World
    </figcaption>
  </figure>
</div>
`;

exports[`<Figure /> should match Figure only snapshot 1`] = `
<div>
  <figure
    class="c-figure"
  >
    <img
      alt="A placeholder image"
      class=""
      src="https://via.placeholder.com/400x300"
    />
    <figcaption
      class=""
    >
      Hello World
    </figcaption>
  </figure>
</div>
`;
